MAJ pom.xml, and app.propreties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,26 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:hsql://localhost/
+#spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+#spring.datasource.url=jdbc:hsqldb:hsql://localhost/
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri: http://localhost:8080/realms/myspringbootapprealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://localhost:8080/realms/myspringbootapprealm/protocol/openid-connect/certs
+
+
+
+# change the port to avoid the use of the keycloak port
+server.port=8082
+
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.platform=h2
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
+spring.datasource.initialization-mode=always
