new branch for Keycloak modifs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-#spring.datasource.url=jdbc:hsqldb:hsql://localhost/
+# spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+# spring.datasource.url=jdbc:hsqldb:hsql://localhost/
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
@@ -15,7 +15,7 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://localhost:8080/rea
 server.port=8082
 
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
