--- a/data/test.properties
+++ b/data/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Wed Sep 20 10:38:17 CEST 2023
-tx_timestamp=109
+#Sat Nov 25 12:05:52 CET 2023
+tx_timestamp=229
 modified=yes
 version=2.7.2
